force-app/main/default/objects/Forecast_Entry__c/Forecast_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores manually entered forecast entry</description>
    <label>Forecast Entry</label>
    <nameField>
        <displayFormat>FE-{00000}</displayFormat>
        <label>Forecast Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>