force-app/main/default/objects/Forecast_Entry__c/fields/AAR_Split_Owner__c.field-meta.xml
<CustomField>
    <fullName>AAR_Split_Owner__c</fullName>
    <label>AAR Split Owner</label>
    <referenceTo>AAR_Split_Owner__c</referenceTo>
    <relationshipLabel>Forecast Entries</relationshipLabel>
    <relationshipName>Forecast_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>