force-app/main/default/objects/Forecast_Entry__c/fields/Activity_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Activity_Last_30_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Last 30 Days</label>
    <type>Checkbox</type>
</CustomField>