force-app/main/default/objects/Forecast_Entry__c/fields/CY_Booking_Total__c.field-meta.xml
<CustomField>
    <fullName>CY_Booking_Total__c</fullName>
    <formula>Forecast_Q1__c + Forecast_Q2__c + Forecast_Q3__c + Forecast_Q4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Booking Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>