force-app/main/default/objects/Forecast_Entry__c/fields/CY_Pipeline_Total__c.field-meta.xml
<CustomField>
    <fullName>CY_Pipeline_Total__c</fullName>
    <formula>Pipeline_Q1__c + Pipeline_Q2__c + Pipeline_Q3__c + Pipeline_Q4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Pipeline Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>