force-app/main/default/objects/Forecast_Entry__c/fields/Forecast_Q1__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Q1__c</fullName>
    <label>Q1 CY Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>