force-app/main/default/objects/Forecast_Entry__c/fields/Forecast_Q21__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Q21__c</fullName>
    <label>Forecast Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>