force-app/main/default/objects/Forecast_Entry__c/fields/Forecast_Sum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sum__c</fullName>
    <formula>Forecast_Q11__c + 
Forecast_Q21__c + 
Forecast_Q31__c + 
Forecast_Q41__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast(Sum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>