force-app/main/default/objects/Forecast_Entry__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Forecast Entry</label>
    <type>Checkbox</type>
</CustomField>