force-app/main/default/objects/Forecast_Entry__c/fields/NY_Pipeline_Total__c.field-meta.xml
<CustomField>
    <fullName>NY_Pipeline_Total__c</fullName>
    <formula>Q1_NY_Pipeline__c + Q2_NY_Pipeline__c + Q3_NY_Pipeline__c + Q4_NY_Pipeline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NY Pipeline Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>