force-app/main/default/objects/Forecast_Entry__c/fields/Pipeline_Q1__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Q1__c</fullName>
    <label>Q1 CY Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>