force-app/main/default/objects/Forecast_Entry__c/fields/Pipeline_Q2__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Q2__c</fullName>
    <label>Q2 CY Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>