force-app/main/default/objects/Forecast_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Media</fullName>
                <default>true</default>
                <label>Core Media</label>
            </value>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>OLV</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>