force-app/main/default/objects/Forecast_Entry__c/fields/PY_Booking_Total__c.field-meta.xml
<CustomField>
    <fullName>PY_Booking_Total__c</fullName>
    <formula>Q1_PY_Bookings__c + Q2_PY_Bookings__c + Q3_PY_Bookings__c + Q4_PY_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY Booking Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>