force-app/main/default/objects/Forecast_Entry__c/fields/Q2_NY_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Q2_NY_Pipeline__c</fullName>
    <label>Q2 NY Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>