force-app/main/default/objects/Forecast_Entry__c/fields/Q2_PY_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Q2_PY_Bookings__c</fullName>
    <label>Q2 PY Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>