force-app/main/default/objects/Forecast_Entry__c/fields/Q3_PY_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Q3_PY_Bookings__c</fullName>
    <label>Q3 PY Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>