force-app/main/default/objects/Forecast_Entry__c/fields/Quick_update__c.field-meta.xml
<CustomField>
    <fullName>Quick_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick update</label>
    <type>Checkbox</type>
</CustomField>