force-app/main/default/objects/Forecast_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Forecast_Q1__c</columns>
    <columns>Pipeline_Q1__c</columns>
    <columns>Q1_NY_Pipeline__c</columns>
    <columns>Q1_PY_Bookings__c</columns>
    <columns>Pipeline_Q2__c</columns>
    <columns>Forecast_Q2__c</columns>
    <columns>Q2_NY_Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AAR_Split_Owner__c</field>
        <operation>contains</operation>
        <value>Honey</value>
    </filters>
    <label>All</label>
</ListView>